# rfp-scraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/: rfp_scraping_demo.xlsx  styles.qss  styles.qss.tpl
persistence/: average_time_manager.py  averages.json
scraper/: logging_config.py
scraper/config/: __init__.py  keywords.txt  settings.py
scraper/core/: base_scraper.py  selenium_scraper.py
scraper/exporters/: __init__.py  excel_exporter.py
scraper/scrapers/: __init__.py  alabama.py  arizona.py  arkansas.py  california.py  colorado.py  connecticut.py
scraper/tests/: __init__.py  test_core.py  test_util.py
scraper/utils/: data_utils.py  date_utils.py  text_utils.py
scripts/: main.py
src/: config.py
src/scraper/: logging_config.py  runner.py
src/scraper/config/: keywords.txt  settings.py
src/scraper/core/: base_scraper.py  errors.py  requests_scraper.py  selenium_scraper.py
src/scraper/exporters/: excel_exporter.py
src/scraper/scrapers/: __init__.py  alabama.py  arizona.py  arkansas.py  california.py  colorado.py  connecticut.py  dc.py  delaware.py  florida.py  georgia.py  hawaii.py  idaho.py  illinois.py  indiana.py  iowa.py  kansas.py  kentucky.py  louisiana.py  maine.py  maryland.py  massachusetts.py  michigan.py  minnesota.py  mississippi.py  missouri.py  montana.py  nebraska.py  nevada.py  new_hampshire.py  new_jersey.py  new_mexico.py  new_york.py  north_carolina.py  north_dakota.py  ohio.py  oregon.py  pennsylvania.py  rhode_island.py  (+10 more)
src/ui/: main_window.py  ui_scale.py
tests/: test_core.py  test_util.py
(+116 files in other folders)
