[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfp-scraper"
version = "0.1.0"
description = "An RFP scraping tool for multiple states filtered by keywords."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Jason Staker", email = "jason.staker@yahoo.com" }
]
requires-python = ">=3.8"
dependencies = [
  "requests",
  "selenium",
  "pandas",
  "beautifulsoup4",
  "chromedriver",
  "webdriver-manager",
  "openpyxl",
  "xlsxwriter",
  "lxml",
  "xlrd",
  "pillow"
]

[project.scripts]
rfp-scraper = "scripts.main:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["scraper*", "ui*", "scripts*", "src*"]